# vk

./: .gitignore  CMakeLists.txt  dev.mk  libvk.cpp  tpm-control  vk-download-audio.cpp  vk-download-messages.cpp  vk-friends-of-friends  vk-friends.cpp  vk-messages2gfm.cpp  vk-player.cpp  vk-request.cpp  vk-wall.cpp
