cmake_minimum_required (VERSION 3.1) # 3.1 adds C_STANDARD
project (vk LANGUAGES CXX)
add_executable (vk-request libvk.cpp vk-request.cpp)
add_executable (vk-player libvk.cpp vk-player.cpp)
add_executable (vk-friends libvk.cpp vk-friends.cpp)
add_executable (vk-download-audio libvk.cpp vk-download-audio.cpp)
add_executable (vk-download-messages libvk.cpp vk-download-messages.cpp)
add_executable (vk-messages2gfm libvk.cpp vk-messages2gfm.cpp)
add_executable (vk-wall libvk.cpp vk-wall.cpp)
set_property (TARGET vk-request vk-player vk-friends vk-download-audio vk-download-messages vk-messages2gfm vk-wall PROPERTY CXX_STANDARD 14)
target_link_library (vk-request -lcurl -ljson-c -lsh)
target_link_library (vk-player -lcurl -ljson-c -lsh)
target_link_library (vk-friends -lcurl -ljson-c -lsh)
target_link_library (vk-download-audio -lcurl -ljson-c -lsh)
target_link_library (vk-download-messages -lcurl -ljson-c -lsh)
target_link_library (vk-messages2gfm -lcurl -ljson-c -lsh)
target_link_library (vk-wall -lcurl -ljson-c -lsh)
install (TARGETS vk-request vk-player vk-friends vk-download-audio vk-download-messages vk-messages2gfm vk-wall DESTINATION bin)
